added finishing message and button

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
       <h1>Matching Game</h1>
     </header>
 
+    <section class="complete">
+      <h1>Congrats!</h1>
+      <button type="button" class="restart">Start new game</button>
+    </section>
+
     <section class="score-panel">
       <ul class="stars">
         <li><i class="fa fa-star"></i></li>
