added inital stars feature

--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,10 @@
 
     <section class="score-panel">
       <ul class="stars">
-        <li><i class="fa fa-star"></i></li>
-        <li><i class="fa fa-star"></i></li>
-        <li><i class="fa fa-star"></i></li>
+        <li class="template-star"><i class="fa fa-star"></i></li>
       </ul>
 
-      <span class="moves">3</span> Moves
+      <span class="moves">0</span> Moves
 
       <button class="restart">
         <i class="fa fa-repeat"></i>
