--- a/public/index.html
+++ b/public/index.html
@@ -10,81 +10,79 @@
 </head>
 <body>
 
-  <div class="container">
-    <header>
-      <h1>Matching Game</h1>
-    </header>
-
+  <main>
     <section class="complete">
       <h1>Congrats!</h1>
-      <button type="button" class="restart">Start new game</button>
+      <button type="button" class="restart complete-button">Start new game</button>
     </section>
 
-    <section class="score-panel">
-      <ul class="stars">
-        <li class="template-star"><i class="fa fa-star"></i></li>
-      </ul>
+    <div class="container">
+      <header>
+        <h1>Matching Game</h1>
+      </header>
 
-      <span class="moves">0</span> Moves
+      <section class="score-panel">
+        <ul class="stars"></ul>
+        <span class="moves">0</span> Moves
+        <button class="restart">
+          <i class="fa fa-repeat"></i>
+        </button>
+      </section>
 
-      <button class="restart">
-        <i class="fa fa-repeat"></i>
-      </button>
-    </section>
-
-    <section class="game-area">
-      <ul class="deck">
-        <li class="card" data-card-type="diamond">
-          <i class="fa fa-diamond"></i>
-        </li>
-        <li class="card" data-card-type="paper-plane-o">
-          <i class="fa fa-paper-plane-o"></i>
-        </li>
-        <li class="card match" data-card-type="anchor">
-          <i class="fa fa-anchor"></i>
-        </li>
-        <li class="card" data-card-type="bolt">
-          <i class="fa fa-bolt"></i>
-        </li>
-        <li class="card" data-card-type="cube">
-          <i class="fa fa-cube"></i>
-        </li>
-        <li class="card match" data-card-type="anchor">
-          <i class="fa fa-anchor"></i>
-        </li>
-        <li class="card" data-card-type="leaf">
-          <i class="fa fa-leaf"></i>
-        </li>
-        <li class="card" data-card-type="bicycle">
-          <i class="fa fa-bicycle"></i>
-        </li>
-        <li class="card" data-card-type="diamond">
-          <i class="fa fa-diamond"></i>
-        </li>
-        <li class="card" data-card-type="bomb">
-          <i class="fa fa-bomb"></i>
-        </li>
-        <li class="card" data-card-type="leaf">
-          <i class="fa fa-leaf"></i>
-        </li>
-        <li class="card" data-card-type="bomb">
-          <i class="fa fa-bomb"></i>
-        </li>
-        <li class="card open show" data-card-type="bolt">
-          <i class="fa fa-bolt"></i>
-        </li>
-        <li class="card" data-card-type="bicycle">
-          <i class="fa fa-bicycle"></i>
-        </li>
-        <li class="card" data-card-type="paper-plane-o">
-          <i class="fa fa-paper-plane-o"></i>
-        </li>
-        <li class="card" data-card-type="cube">
-          <i class="fa fa-cube"></i>
-        </li>
-      </ul>
-    </section>
-  </div>
+      <section class="game-area">
+        <ul class="deck">
+          <li class="card" data-card-type="diamond">
+            <i class="fa fa-diamond"></i>
+          </li>
+          <li class="card" data-card-type="paper-plane-o">
+            <i class="fa fa-paper-plane-o"></i>
+          </li>
+          <li class="card match" data-card-type="anchor">
+            <i class="fa fa-anchor"></i>
+          </li>
+          <li class="card" data-card-type="bolt">
+            <i class="fa fa-bolt"></i>
+          </li>
+          <li class="card" data-card-type="cube">
+            <i class="fa fa-cube"></i>
+          </li>
+          <li class="card match" data-card-type="anchor">
+            <i class="fa fa-anchor"></i>
+          </li>
+          <li class="card" data-card-type="leaf">
+            <i class="fa fa-leaf"></i>
+          </li>
+          <li class="card" data-card-type="bicycle">
+            <i class="fa fa-bicycle"></i>
+          </li>
+          <li class="card" data-card-type="diamond">
+            <i class="fa fa-diamond"></i>
+          </li>
+          <li class="card" data-card-type="bomb">
+            <i class="fa fa-bomb"></i>
+          </li>
+          <li class="card" data-card-type="leaf">
+            <i class="fa fa-leaf"></i>
+          </li>
+          <li class="card" data-card-type="bomb">
+            <i class="fa fa-bomb"></i>
+          </li>
+          <li class="card open show" data-card-type="bolt">
+            <i class="fa fa-bolt"></i>
+          </li>
+          <li class="card" data-card-type="bicycle">
+            <i class="fa fa-bicycle"></i>
+          </li>
+          <li class="card" data-card-type="paper-plane-o">
+            <i class="fa fa-paper-plane-o"></i>
+          </li>
+          <li class="card" data-card-type="cube">
+            <i class="fa fa-cube"></i>
+          </li>
+        </ul>
+      </section>
+    </div>
+  </main>
 
   <script src="js/app.js"></script>
 </body>
