added timer feature

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <main>
     <section class="complete">
       <h1>Congrats!</h1>
+      <p>Time taken: <span class="time-taken"></span></p>
       <button type="button" class="restart complete-button">Start new game</button>
     </section>
 
@@ -23,7 +24,8 @@
 
       <section class="score-panel">
         <ul class="stars"></ul>
-        <span class="moves">0</span> Moves
+        <span class="moves">0 </span>
+        <span class="timer">00:00</span>
         <button class="restart">
           <i class="fa fa-repeat"></i>
         </button>
