Memory game updates ready for submission

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
         </button>
       </section>
 
+      <!-- In the JS files I have created the list itens from scratch -->
       <section class="game-area">
         <ul class="deck">
-          <li class="card" data-card-type="diamond">
+          <!-- <li class="card" data-card-type="diamond">
             <i class="fa fa-diamond"></i>
           </li>
           <li class="card" data-card-type="paper-plane-o">
@@ -85,7 +86,7 @@
           </li>
           <li class="card" data-card-type="cube">
             <i class="fa fa-cube"></i>
-          </li>
+          </li> -->
         </ul>
       </section>
     </div>
