- Updated README with instructions to play game - Added final stars to modal

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <section class="complete modal">
       <h1>Congrats!</h1>
       <p>Time taken: <span class="time-taken"></span></p>
+      <div class="stars-wrapper">
+        <ul class="final-stars"></ul>
+      </div>
       <button type="button" class="restart complete-button">Start new game</button>
     </section>
 
